/*
 *
 */

2009-03-03 09:26 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * include/wxh.h
  * samples/arrbrowser/arrbrowser.prg
  * src/common/wx_harbour.cpp
  * src/hrbcompat/tbrowse/wx_browse.cpp
  * src/wxbase/baseclasses/wx_object.cpp
  * src/wxbase/baseclasses/wx_window.cpp
  * src/wxbase/manwindows/wx_frame.cpp
  * tests/test1/test1.prg
    ; still optimizing and fixing mem bugs
    ; work in progress

2009-02-28 11:10 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * include/wxh.h
  * src/common/wx_harbour.cpp
  * src/wxbase/baseclasses/wx_object.cpp
  * tests/test1/test1.prg
    % Optimizing the memory handling
    ! Fixing memory leaks
    ; work in progress

2009-02-18 15:42 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * include/property.ch
    * changed PUBLISHED to use PUBLIC scope
    * PERSISTENT must be explicitly declared on DATA's

2009-02-16 14:55 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  + src/wxbase/baseclasses/wxhmouseevent.prg

2009-02-16 14:50 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * GNUmakefile
  * include/property.ch
  * include/wxharbour.ch
  * include/wxhevtdefs.h
  * include/wxh.h
  * src/common/wxhfuncs.prg
  * src/common/wxhutils.prg
  * src/hrbcompat/misc/wxGET.prg
  * src/hrbcompat/misc/wxhfunctions.prg
  * src/raddox/dba.prg
  * src/raddox/tfield.prg
  * src/raddox/tindex.prg
  * src/raddox/ttable.prg
  * src/wxbase/baseclasses/wx_event.cpp
  * src/wxbase/baseclasses/wx_evthandler.cpp
  * src/wxbase/baseclasses/wxhevent.prg
  * src/wxbase/baseclasses/wxhevthandler.prg
  * src/wxbase/baseclasses/wxhwindow.prg
  * src/wxbase/baseclasses/wx_window.cpp

2009-02-08 11:44 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * GNUmakefile
  + include/wxbase/wx_choice.h
  * include/wxharbour.ch
  * src/common/wxhfuncs.prg
  * src/hrbcompat/misc/wxGET.prg
  + src/wxbase/baseclasses/wxchoice.prg
  + src/wxbase/baseclasses/wx_controlwithitems.cpp
  * src/wxbase/baseclasses/wxhcontrolwithitems.prg