@@ -27,7 +27,6 @@ RETURN NIL
 */
 CLASS MyApp FROM wxApp
 PRIVATE:
-  DATA bz INIT {NIL,NIL,NIL}
 PROTECTED:
 PUBLIC:
   METHOD OnInit
@@ -78,14 +77,12 @@ METHOD FUNCTION OnInit() CLASS MyApp
     ENDMENU
   ENDMENU
 
-  AltD()
-
-  BEGIN BOXSIZER VERTICAL //VAR ::bz[1]
+  BEGIN BOXSIZER VERTICAL
     @ BROWSE VAR b DATASOURCE a ;
       SIZERINFO ALIGN EXPAND STRETCH
-    BEGIN BOXSIZER VERTICAL "" ALIGN EXPAND VAR ::bz[2]
+    BEGIN BOXSIZER VERTICAL "" ALIGN EXPAND
       @ GET text VAR textCtrl MULTILINE SIZERINFO ALIGN EXPAND STRETCH
-      BEGIN BOXSIZER HORIZONTAL VAR ::bz[3]
+      BEGIN BOXSIZER HORIZONTAL
         @ BUTTON "GoTop" ACTION b:GoTop()
         @ BUTTON "GoBottom" ACTION b:GoBottom()
         @ BUTTON "PgUp" ACTION b:PageUp()
